crates/core/src/html/snapshots/epub_tailor_core__html__boxes__tests__aside_with_bold_lead_snapshot.snap
---
source: crates/core/src/html/boxes.rs
expression: out
---
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml"><head><title>T</title></head><body><p class="et-box-title"><strong>Note:</strong></p><p>mind the gap.</p></body></html>
